syntax = "proto3";
package lottery.lottery;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "lottery/x/lottery/types";

// Msg defines the Msg service.
service Msg {
      rpc AddBet(MsgAddBet) returns (MsgAddBetResponse);
  rpc RevealBet(MsgRevealBet) returns (MsgRevealBetResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgAddBet {
  string creator = 1;
  string amount = 2;
  string suffixHash = 3;
}

message MsgAddBetResponse {
}

message MsgRevealBet {
  string creator = 1;
  string suffix = 2;
}

message MsgRevealBetResponse {
}

// this line is used by starport scaffolding # proto/tx/message
